--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ html::before {
   content: "";
   position: fixed;
   inset: 0;
-  background: url("Assets/background.png") center/cover no-repeat;
+  background: url("background.png") center/cover no-repeat;
   filter: blur(12px) brightness(0.35);
   transform: scale(1.12);
   z-index: -1;
@@ -1028,7 +1028,7 @@ body.loaded {
                 <div class="evento-card">
                     <div class="evento-video">
                         <iframe 
-                            src="https://drive.google.com/file/d/1rYYlsGfkmhSaDXU2ioZ3YjbXgA6NPN3x/preview" 
+                            src="https://drive.google.com/file/d/1r3MfxmLBw4HLWwZSIGImrlvoPyyLj1TO/preview" 
                             width="100%" 
                             height="200" 
                             allow="autoplay"
@@ -1037,7 +1037,7 @@ body.loaded {
                     </div>
                     <div class="evento-info">
                         <h3>Apresentação Anterior</h3>
-                        <p>Born to be Wild - Steppenwolf</p>
+                        <p>Rota 99 no Trio Elétrico</p>
                         <p class="evento-local">Evento Privado</p>
                     </div>
                 </div>
