--- a/index.html
+++ b/index.html
@@ -1070,6 +1070,7 @@ body.loaded {
                 <div class="galeria-item"><img src="Assets/Saulo_Cuevas.JPG" alt="Saulo Cuevas" class="galeria-img"></div>
                 <div class="galeria-item"><img src="Assets/Renato_Santos.JPG" alt="Renato Santos" class="galeria-img"></div>
                 <div class="galeria-item"><img src="Assets/Ricardo_Farias.png" alt="Ricardo Farias" class="galeria-img"></div>
+                <div class="galeria-item"><img src="Assets/ricardo_jorge_system.jpg" alt="Ricardo e Jorge no show do System of a Down" class="galeria-img"></div>
                 <div class="galeria-item"><img src="Assets/Jorge_cardoso.JPG" alt="Jorge Cardoso" class="galeria-img"></div>
                 <div class="galeria-item"><img src="Assets/Renato_Santos_Guitarra.JPG" alt="Renato Santos na Guitarra" class="galeria-img"></div>
                 <div class="galeria-item"><img src="Assets/Integrantes_Rota_99.jpg" alt="Integrantes Rota 99" class="galeria-img"></div>
