--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ html::before {
   content: "";
   position: fixed;
   inset: 0;
-  background: url("background.png") center/cover no-repeat;
+  background: url("./Assets/Background.png") center/cover no-repeat;
   filter: blur(12px) brightness(0.35);
   transform: scale(1.12);
   z-index: -1;
