--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     box-sizing: border-box;
 }
 
+        
 :root {
     --primary-color: #ff6b35;
     --secondary-color: #f7931e;
@@ -984,9 +985,9 @@ body.loaded {
                         <img src="Assets/Flyer_Show_dia_04.09_no_PUB_As_Divas_de_Tio Chico.JPG" alt="Flyer Show 04.09" class="flyer-img">
                     </div>
                     <div class="evento-info">
-                        <h3>Show no PUB As Divas de Tio Chico</h3>
+                        <h3>Show no PUB As Divas do Tio Chico</h3>
                         <p class="evento-data">04 de Setembro</p>
-                        <p class="evento-local">PUB As Divas de Tio Chico</p>
+                        <p class="evento-local">PUB As Divas do Tio Chico</p>
                         <p class="evento-horario">19:30</p>
                     </div>
                 </div>
