--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@ body.loaded {
             <h2 class="section-title">Sobre a Banda</h2>
             <div class="sobre-content">
                 <div class="sobre-text">
-                    <p>Somos a Rota 99, uma banda de rock de Lauro de Freitas, Bahia, que mistura a energia das ondas do nosso litoral com o peso e a atitude do rock'n'roll.
+                    <p>Somos a Rota 99, uma banda de rock de Lauro de Freitas, Bahia, que mistura a energia das ondas do nosso litoral com o peso e a atitude do Rock n' Roll.
                     O nome nasceu da fusão entre o espírito lendário da Route 66 🇺🇸 e a nossa estrada de casa, a BA-099 (Estrada do Coco 🌴🌊) — uma rota que respira liberdade, música e paisagens incríveis.</p>
                     <p>Nosso repertório é uma viagem por décadas e estilos: de Led Zeppelin a Charlie Brown Jr., de Nirvana a Barão Vermelho, passando por Metallica, Pearl Jam e muito mais. No palco, levamos a descontração da praia e a intensidade das grandes guitarras, criando uma conexão única com o público. Para nós, cada show é uma estrada aberta, com destino certo: o poder do rock ao vivo.</p>
                 </div>
