--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@ body.loaded {
                 </div>
                 <div class="membros">
                     <div class="membro">
-                        <img src="Assets/Saulo_Cuevas.JPG" alt="Saulo Cuevas" class="membro-img">
+                        <img src="Assets/Saulo_Cuevas.jpeg" alt="Saulo Cuevas" class="membro-img">
                         <h3>🎤 Saulo Cuevas</h3>
                         <p>Vocais</p>
                     </div>
@@ -1068,7 +1068,7 @@ body.loaded {
         <div class="container">
             <h2 class="section-title">Galeria</h2>
             <div class="galeria-grid">
-                <div class="galeria-item"><img src="Assets/Saulo_Cuevas.JPG" alt="Saulo Cuevas" class="galeria-img"></div>
+                <div class="galeria-item"><img src="Assets/Saulo_Cuevas.jpeg" alt="Saulo Cuevas" class="galeria-img"></div>
                 <div class="galeria-item"><img src="Assets/Renato_Santos.JPG" alt="Renato Santos" class="galeria-img"></div>
                 <div class="galeria-item"><img src="Assets/Ricardo_Farias.png" alt="Ricardo Farias" class="galeria-img"></div>
                 <div class="galeria-item"><img src="Assets/ricardo_jorge_system.jpg" alt="Ricardo e Jorge no show do System of a Down" class="galeria-img"></div>
